# grpc-sidecar-logs

./: .env  Cargo.toml  build.rs  notes.txt  test_steps
proto/: logcanal.proto
src/: app.rs  kafka_sender.rs  log_service.rs
