[package]
name = "enge-sidecar-log"
version = "0.1.0"
authors = ["ROGERIO RAMOS BARROS FERREIRA <rogerio.ferreira@bradesco.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "enge-sidecar-log-app"
path = "src/app.rs"

[dependencies]
tonic = "0.4.3"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros", "sync", "time"]}
prost = "0.7.0"
prost-types = "0.7.0"
futures = "0.3.15"
rdkafka = "0.26.0"
serde = "1.0.126"
serde_json = "1.0.64"
dotenv = "0.15.0"
anyhow = "1.0.40"
flume = "0.10.5"

[profile.release]
lto = 'fat'
panic = 'abort'
opt-level = 3
codegen-units = 1

[build-dependencies]
tonic-build = "0.4.2"